# mvi-tetris

./: BaseField.cpp  BaseField.h  BaseFigure.cpp  BaseFigure.h  CMakeLists.txt  Elements.cpp  Elements.h  FieldView.cpp  FieldView.h  FigureView.cpp  FigureView.h  MVI_Tetris.sln  MVI_Tetris.vcxproj  MVI_Tetris.vcxproj.filters  NumericLabel.cpp  NumericLabel.h  NumericStorage.cpp  NumericStorage.h  README.md  TetrisController.cpp  TetrisController.h  TetrisView.cpp  TetrisView.h  main.cpp
cmake/: PrepareSFML.cmake
